ERROR, FAILED, BACKWARD_RECOVERY, event-based logic